Fixed issue where split-printing a prescription item was not appearing correctly on the printout, causing cascading alignment issues, missing drugs and duplicated tapers. Moved page counter into the prescription list section as a separate field. As a result, page number is now mirrored on the counterfoil side. This means the number of prescription lines has been reduced by 1. Reduced left margin on prescription list field for FP10 form by 2mm. WP10 margins remain unchanged. Reduced maximum lines by 1 (in addition to the change made for page counter) to cater for the slightly smaller space on the WP10 form. Maximum number of line characters is now determined based on the print format. This is because the WP10 prescription list section has slightly less space than on the FP10 form.

--- a/protected/modules/OphDrPrescription/assets/css/fpten.css
+++ b/protected/modules/OphDrPrescription/assets/css/fpten.css
@@ -195,8 +195,8 @@ body {
 
 .fpten-prescription-list {
     height: 78mm;
-    width: 57mm;
-    margin-left: 29mm;
+    width: 59mm;
+    margin-left: 27mm;
 }
 
 .right .fpten-prescription-list, .right .wpten-prescription-list {
@@ -234,4 +234,10 @@ body {
 
 .right .fpten-date {
     margin-left: 53mm; !important;
+}
+
+.fpten-page-counter {
+    font-size: 7.5pt;
+    font-weight: bold;
+    text-align: right;
 }
